Reverted to pentaho 6.1